app/assets/stylesheets/layout.scss
.hide {
  display: none;
}

header {
  position: relative;
}

.wrapper,
body > header > .inner,
nav.bar,
nav.sub,
nav.account,
.flash-container,
.content-container,
body > footer {
  @include container;
  position: relative;
}

#overlay {
  display: none;
  width: 500px;
  padding: 10px;
  z-index: 2000;
}

.clickable {
  cursor: pointer;
}

// Tables

table {
  margin-bottom: 12px;
  td, th {
    padding: 4px;
  }
}

// Lists

ul.horizontal, ol.horizontal {
  li {
    display: inline;
  }
}

// Flash

div.flash-container .flash {
  padding: 6px;
  padding-left: 12px;
  margin: 10px;
  font-weight: bold;
  @include border-radius(5px);
  &.alert {
    background: $red;
    color: white;
    width: 95%;
  }
  &.notice {
    background: $lightgreen;
    color: white;
    width: 95%;
  }
}

// Tabs

ul.tabs {
  float: left;
  width: 100%;
  margin-bottom: 6px;
  li {
    a {
      float: left;
      display: block;
      padding: 6px;
    }
  }
}

div.panes > div {
  float: left;
  width: 100%;
}

// Sign in

body.devise-sessions div.content {
  @include column($half-span);
  @include push(4);
}

// Sign up

body.devise-registrations div.content {
  @include column($half-span);
  @include push(4);
}

// Home page

body.home {
  .issues-area {
    @include column($half-span, "first");
  }

  .groups-area {
    @include column($half-span, "last");
  }
}

// User dashboard
body.dashboards {
}

article.thread.compact {
  margin-bottom: 8px;
  .wrapper {
    margin: 4px;
  }
  h3 {
    font-weight: bold;
    margin: 0;
  }
}

article.message {
  float: left;
  width: 100%;
  position: relative;
  margin-bottom: 10px;
  min-height: 60px;
  .details {
    padding: 4px;
    .author a {
      margin-left: 4px;
    }
    .thumbnail {
      float: left;
      margin-right: 10px;
      width: 50px;
      height: 50px;
    }
  }
  .body {
    padding: 4px;
    margin-left: 60px
  }
}

// Issues

body.issues,
body.group-issues {
  article.issue {
    section.voting {
      float: right;
    }
    .map {
      clear: both;
    }
    section.description {
      margin-right: 70px;
      margin-top: 15px;
    }
  }
}

p.thread-number {
  float: right;
  text-transform: uppercase;
  font-size: 12px;
  line-height: 14px;
  font-weight: bold;
  padding-left: 20px;
  text-align: center;
  color: #999;
}

p.comment {
  color: #d7d7d7;
  a {
    color: #ccc;
  }
}


#issue-list-header {
  padding-bottom: 0.6em;
  p {
    clear: left;
  }
}

// User profile

.user-profile-form {
  .sidebar {
    @include column(2, "first");
  }
  .form {
    @include column(9, "last");
  }
}

// Library

body.libraries {
  .head {
    @include column($full-span);
  }
  .search {
    @include column($full-span);
  }
  ul.library-selector {
    @include column(6);
    @include push(1);
    .icon {
      @include column(1, "first");
    }
    .name {
      @include column(1);
    }
    .description {
      @include column(4, "last");
    }
  }
}

// Library documents

body.library-documents {
  article.library.document {
    @include column($full-span);
    section.document {
      padding-top: 20px;
    }
    section.notes {
      padding-top: 20px;
    }
  }
}

body.library-notes {
  article.library {
    section.note {
      padding-top: 20px;
    }
  }
}
@media (max-width: 980px) {

  #page {
    margin-left: auto;
    margin-right: auto;
    width: 95%;
    position: relative;

    .wrapper {
      margin-left: auto;
      margin-right: auto;
      width: 95%;
      position: relative;
      padding: 20px 0 30px;
    }
  }

  #crumb-search {
    .wrapper {
      width: 95%;
    }
  }

}

